--- a/final-year-project/final-year-project/PROJECT CODE MODULE WISE/templates/index.html
+++ b/final-year-project/final-year-project/PROJECT CODE MODULE WISE/templates/index.html
@@ -18,7 +18,7 @@
     <a href="/predict" title="Predict">Flood Prediction</a>
       <div class="topnav-right">
         <a href="/logout" title="Logout">Logout</a>
-        <a class="material-icons" style="font-size:23px" href="/user_account"title="contact us">&#xf2bd;</a> 
+        <a class="material-icons" style="font-size:23px" href="/index">&#xe7ff;</a>
           <a href="/helpafterlogin" title="contact us">&#9742</a>
       </div>
 </div>
