--- a/final-year-project/final-year-project/PROJECT CODE MODULE WISE/templates/rainfall_analysis_predict.html
+++ b/final-year-project/final-year-project/PROJECT CODE MODULE WISE/templates/rainfall_analysis_predict.html
@@ -23,7 +23,7 @@
 	  </div>
 </div>
 
-<form method="POST" action="#">
+<form method="POST" >
   <label for="subdivision">Choose a Subdivision:</label>
   <select name="subdivision" id="subdivision">
       <option>Choose a Subdivision</option>
@@ -64,13 +64,11 @@
       <option value="KERALA">KERALA</option>
       <option value="LAKSHADWEEP">LAKSHADWEEP</option>
 
-
-
-
-
   </select>
   <br><br>
-  <input type="submit" value="Submit">
+  <input type="submit" value="submit">
+
+
 </form>
 </body>
 </html>
